@@ -13,13 +13,13 @@ grails.project.fork = [
         //  compile: [maxMemory: 256, minMemory: 64, debug: false, maxPerm: 256, daemon:true],
 
         // configure settings for the test-app JVM, uses the daemon by default
-        test   : [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, daemon: true],
+        test   : [maxMemory: 8192, minMemory: 64, debug: false, maxPerm: 256, daemon: true],
         // configure settings for the run-app JVM
-        run    : [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, forkReserve: false],
+        run    : [maxMemory: 8192, minMemory: 64, debug: false, maxPerm: 256, forkReserve: false],
         // configure settings for the run-war JVM
-        war    : [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, forkReserve: false],
+        war    : [maxMemory: 8192, minMemory: 64, debug: false, maxPerm: 256, forkReserve: false],
         // configure settings for the Console UI JVM
-        console: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256]
+        console: [maxMemory: 8192, minMemory: 64, debug: false, maxPerm: 256]
 ]
 
 grails.project.dependency.resolver = "maven" // or ivy
@@ -119,3 +119,6 @@ grails.project.dependency.resolution = {
         //runtime ":yui-minify-resources:0.1.5"
     }
 }
+
+grails.jvmArgs = ["-Xms1024m", "-Xmx8192m", "-XX:MaxPermSize=512m"]
+grails.tomcat.jvmArgs = ["-Xms1024m", "-Xmx8192m", "-XX:MaxPermSize=512m"]
